--- a/index.html
+++ b/index.html
@@ -279,28 +279,21 @@ input, select {
  
 <body class="dark-mode">
 <div id="poi-alert" style="display:none;">⚠️ POINT D'INTÉRÊT ENREGISTRÉ</div>  
-<header>    
 <header id="master-hud-fixed">
     <div class="hud-top">
         <div id="ai-mode" class="badge">STASE</div>
         <div id="world-reference-badge" class="badge-sci">CORPUS: <span id="current-world-id">EARTH (WGS84)</span></div>
     </div>
     <div class="hud-main">
-        <div id="main-speed" class="tabular">0.00000</div>
+        <div id="main-speed" class="tabular">-.-----</div>
         <div class="unit">KM/H</div>
     </div>
     <div class="hud-sub">
-        <div class="stat">γ: <span id="gamma-factor-precise">1.0000000000</span></div>
+        <div class="stat">γ: <span id="gamma-factor-precise">-.--------</span></div>
         <div class="stat">STATUS: <span id="reality-status-main">INTEGRITY_OK</span></div>
     </div>
     <button id="start-btn-final" onclick="initOmniscience()">🚀 INITIALISER LA SINGULARITÉ</button>
 </header>
-    <div class="hud-display">
-        <div id="sp-main-hud">-.-----</div>
-    <div class="hud-label">km/h • SINGULARITY CORE</div>
-    <canvas id="telemetry-mini"></canvas>
-    <button id="start-btn-final">DÉMARRER LE NOYAU</button>
-    </div>
 </div>
     
     <main class="dashboard-container">
@@ -339,7 +332,7 @@ input, select {
                     <button id="reset-dist-btn" onclick="resetDistance()">RESET Distance</button>
                     <button id="reinit-vmax-btn" onclick="resetMaxSpeed()">RESET V-MAX</button>
                     <button id="log-export-btn" onclick="exportData()">EXPORT LOGS</button>
-                    <button id="emergency-stop" class="critical" onclick="resetAll()">Tout Rinisialiser</button>
+                    <button id="reset-all-btn" class="critical" onclick="resetAll()">Tout Rinisialiser</button>
                     </div>
                     <div class="control-input-full">
                         <label for="gps-accuracy-override">Forcer Précision GPS (m) [0=Auto]</label>
@@ -388,11 +381,6 @@ input, select {
                     </div>
                 </div>
             </section>
-
-            <section class="panel" aria-labelledby="imu-heading">
-                <h2 id="imu-heading"><i class="fas fa-microchip"></i> IMU (Accéléromètre/Gyroscope)</h2>
-                <div class="label" style="color:var(--accent);">🛠️ ÉTATS INTERNES (KALMAN 21)</div>
-<div class="data-grid">
     <div class="data-point"><span>Acc Filtrée</span><span id="f-acc-xyz">0/0/0</span></div>
     <div class="data-point"><span>Biais Estimés</span><span id="bias-acc-val" style="color:#ffcc00;">--</span></div>
     <div class="data-point"><span>Dérive Gyro</span><span id="bias-gyro-val" style="color:#ffcc00;">--</span></div>
@@ -439,14 +427,7 @@ input, select {
             <section class="panel" aria-labelledby="speed-heading">
                 <h2 id="speed-heading"><i class="fas fa-tachometer-alt"></i> Vitesse, Distance & Relativité</h2>
                 <div class="speed-display" role="status" aria-live="polite">
-                    <div class="hud-main-data">
-    <div id="main-speed" class="tabular">0.0000</div>
-    <div class="unit">KM/H</div>
-</div>
-<div class="hud-sub-data">
-    <span>γ (Lorentz):</span> <span id="gamma-factor-precise">1.00000000</span>
-    <span>Status:</span> <span id="reality-status-main">INTEGRITY_OK</span>
-</div>
+                </div>
 
                 <div class="data-point" style="background: rgba(0, 255, 255, 0.1); border: 1px solid #00ffff;">
                 <span style="color: #00ffff;">🚀 Vitesse Cosmique</span>
