--- a/index.html
+++ b/index.html
@@ -293,11 +293,8 @@ input, select {
         <div class="stat">STATUS: <span id="reality-status-main">INTEGRITY_OK</span></div>
     </div>
     <button id="start-btn-final" onclick="initOmniscience()">🚀 INITIALISER LA SINGULARITÉ</button>
-</header>
-</div>
-    
-    <main class="dashboard-container">
-        
+</header>    
+    <main class="dashboard-container">     
         <div class="column">
             <section class="panel" aria-labelledby="controls-heading">
                 <h2 id="controls-heading"><i class="fas fa-cog"></i> Contrôles & Système</h2>
@@ -381,11 +378,6 @@ input, select {
                     </div>
                 </div>
             </section>
-    <div class="data-point"><span>Acc Filtrée</span><span id="f-acc-xyz">0/0/0</span></div>
-    <div class="data-point"><span>Biais Estimés</span><span id="bias-acc-val" style="color:#ffcc00;">--</span></div>
-    <div class="data-point"><span>Dérive Gyro</span><span id="bias-gyro-val" style="color:#ffcc00;">--</span></div>
-    <div class="data-point"><span>Confiance Matrice</span><span id="kalman-p-certainty">--</span></div>
-</div>
 <section class="panel">
     <h2><i class="fas fa-microchip"></i> Navigation Inertielle (EKF 21-États)</h2>
     <div class="data-grid">
@@ -405,9 +397,6 @@ input, select {
             <span>Confiance Matrice P (Covariance)</span>
             <span id="kalman-p-certainty">100.00 %</span>
         </div>
-    </div>
-    <div class="spirit-level-container">
-        <div id="bubble" class="spirit-level-bubble"></div>
     </div>
 </section>        
             <section class="panel" aria-labelledby="env-sensors-heading">
@@ -542,7 +531,7 @@ input, select {
         </div>
         <div class="data-point">
             <span>Dilatation Temporelle</span>
-            <span id="time-dilation-ns">0.00 ns/jour</span>
+            <span id="time-dilation-ns">-.-- ns/jour</span>
         </div>
         <div class="data-point">
             <span>Rayon Ellipsoïde Local</span>
@@ -555,19 +544,15 @@ input, select {
     <div class="data-grid">
         <div class="data-point">
             <span>Vitesse Propre (Détail)</span>
-            <span id="speed-detail-val">0.00 m/s</span>
+            <span id="speed-detail-val">-.-- m/s</span>
         </div>
         <div class="data-point">
             <span>Facteur Lorentz (Détail)</span>
-            <span id="gamma-detail-val">1.0000</span>
+            <span id="gamma-detail-val">-.----</span>
         </div>
         <div class="data-point">
             <span>Énergie Cinétique (Rel.)</span>
-            <span id="rel-kinetic-energy">0.00 J</span>
-        </div>
-        <div class="data-point">
-            <span>Densité de Planck (Locale)</span>
-            <span id="planck-density">--</span>
+            <span id="rel-kinetic-energy">-.-- J</span>
         </div>
     </div>
                 </section>
@@ -622,7 +607,6 @@ input, select {
                 <div class="spirit-level-container" id="spirit-level">
                      <div class="crosshair-h"></div>
                     <div class="crosshair-v"></div>
-                    <div class="spirit-level-bubble" id="bubble" style="transform: translate(0px, 0px);"></div>
                 </div>
                 <div class="data-point">
                     <span>Inclinaison (Pitch)</span>
