--- a/index.html
+++ b/index.html
@@ -437,7 +437,6 @@ input, select {
                 <div>Accélération Y: <span class="val" id="acc-y">-.---</span></div>
                 </div>    
                 <hr>
-                </div>
                 <h3>Physique & Relativité</h3>
                 <div class="data-point"><span>Vitesse du Son Locale (Cor.)</span><span id="vitesse-son-cor">--</span></div>
                 <div class="data-point"><span>% de la Vitesse du Son</span><span id="perc-speed-sound">-.-- %</span></div>
@@ -522,7 +521,7 @@ input, select {
                 <div class="data-point"><span>Force G (Verticale)</span><span id="force-g-vert">--</span></div>
                 <div class="data-point"><span>Vitesse Angulaire (Gyro)</span><span id="angular-speed">--</span></div>
                 <div class="data-point"><span>Coeff. Balistique (Inertie)</span><span id="ballistic-coeff">--</span></div>
-<section class="panel">
+    <div class="sub-panel">
     <h2><i class="fas fa-globe-europe"></i> Géodésie & Espace-Temps</h2>
     <div class="data-grid">
         <div class="data-point">
@@ -539,7 +538,7 @@ input, select {
         </div>
     </div>
 </section>
-                <section class="panel">
+                <div class="sub-panel">
     <h2><i class="fas fa-atom"></i> Physique Relativiste</h2>
     <div class="data-grid">
         <div class="data-point">
